--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
   },
   "devDependencies": {
     "del": "^7.1.0",
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "gulp-imagemin": "^9.0.0",
+    "stylelint": "^16.2.1",
+    "stylelint-config-htmlacademy": "^4.1.0"
   },
   "type": "module"
 }
