--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "del": "^7.1.0",
     "gulp": "^4.0.2",
     "gulp-imagemin": "^9.0.0",
+    "gulp-ttf2woff": "^1.1.1",
     "stylelint": "^16.2.1",
     "stylelint-config-htmlacademy": "^4.1.0"
   },
